--- a/cart.css
+++ b/cart.css
@@ -72,6 +72,19 @@ section{
     transform: scaleX(1);
 }
 
+.navigation span {
+    background-color: red;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    position: absolute;
+    top: 14px;
+    left: 63.5%;
+    padding: 3px 10px;
+}
+
 .logout-popup{
     width: 130px;
     height: 50px;
@@ -153,7 +166,7 @@ section{
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    border: 2px solid grey;
+    border: 2px solid rgb(0, 0, 0);
     border-radius: 5px;
     margin-top: 100px;
     margin-right: 20px;
