--- a/style.css
+++ b/style.css
@@ -167,9 +167,9 @@ header {
 
 .dishes .box-container .box{
     padding: 1.5rem;
-    background: rgb(255, 255, 255);
+    background: white;
     border-radius: .5rem;
-    border: .1rem solid rgba(0, 0, 0, .2);
+    border: .1rem solid rgb(45, 28, 16);
     box-shadow: grey;
     position: relative;
     overflow: hidden;
@@ -302,20 +302,6 @@ header {
 .footer .credit span{
     color: #0d1168;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
